--- a/index.html
+++ b/index.html
@@ -8,27 +8,41 @@
 <body>
 
   <div class="container" id="container-principal">
-    <h2>Assistente de IA</h2>
 
-    <label for="api-key">OpenAI API Key:</label><br>
-    <input type="text" id="api-key" placeholder="***********************************"><br><br>
+    <div class="titulo">
+      <h2>Assistente de IA</h2>
+    </div>
 
-    <label for="modelo">Modelo:</label><br>
-    <select id="modelo">
-      <option>GPT-4.1 Nano</option>
-      <option>GPT-4.1</option>
-      <option>GPT-3.5</option>
-    </select><br><br>
-
-    <label for="pergunta">Pergunta:</label><br>
-    <textarea id="pergunta" rows="3" cols="40" readonly>Qual é a função de um framework no desenvolvimento web?</textarea><br><br>
-
-    <button onclick="mostrarResposta()">Perguntar</button>
+    <div class="key-model">
+      <div class="key">
+        <label for="api-key">OpenAI API Key:</label>
+        <br>
+        <input type="text" id="api-key" placeholder="***********************************">
+        <br><br>
+      </div>
+      <div class="model">
+        <label for="modelo">Modelo:</label>
+        <br>
+        <select id="modelo">
+        <option>GPT-4.1 Nano</option>
+        <option>GPT-4.1</option>
+        <option>GPT-3.5</option>
+        </select>
+        <br><br>
+      </div>
+    </div>
+      
+    <label for="pergunta">Pergunta:</label>
+    <div class="pergunta-box">
+      <textarea id="pergunta" rows="5" cols="100" readonly>Qual é a função de um framework no desenvolvimento web?</textarea>
+      <button onclick="mostrarResposta()">Perguntar</button>
+    </div>   
 
     <div class="resposta-box" id="resposta-box">
       <h3>Resposta da IA:</h3>
       <p id="texto-resposta">Clique em Perguntar para ver a resposta.</p>
     </div>
+
   </div>
 
   <script src="script.js"></script>
