--- a/index.html
+++ b/index.html
@@ -2,33 +2,44 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Assistente de IA</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_refatorado.css">
 </head>
 <body>
 
   <div class="container" id="container-principal">
-    <h2>Assistente de IA</h2>
+    <header>
+      <h2>Assistente de IA</h2>
+    </header>
 
-    <label for="api-key">OpenAI API Key:</label><br>
-    <input type="text" id="api-key" placeholder="***********************************"><br><br>
+    <main>
+      <section class="form-group">
+        <label for="api-key">OpenAI API Key:</label>
+        <input type="password" id="api-key" placeholder="***********************************">
+      </section>
 
-    <label for="modelo">Modelo:</label><br>
-    <select id="modelo">
-      <option>GPT-4.1 Nano</option>
-      <option>GPT-4.1</option>
-      <option>GPT-3.5</option>
-    </select><br><br>
+      <section class="form-group">
+        <label for="modelo">Modelo:</label>
+        <select id="modelo">
+          <option>GPT-4.1 Nano</option>
+          <option>GPT-4.1</option>
+          <option>GPT-3.5</option>
+        </select>
+      </section>
 
-    <label for="pergunta">Pergunta:</label><br>
-    <textarea id="pergunta" rows="3" cols="40" readonly>Qual é a função de um framework no desenvolvimento web?</textarea><br><br>
+      <section class="form-group">
+        <label for="pergunta">Pergunta:</label>
+        <textarea id="pergunta" rows="3" cols="40" readonly>Qual é a função de um framework no desenvolvimento web?</textarea>
+      </section>
 
-    <button onclick="mostrarResposta()">Perguntar</button>
+      <button onclick="mostrarResposta()">Perguntar</button>
 
-    <div class="resposta-box" id="resposta-box">
-      <h3>Resposta da IA:</h3>
-      <p id="texto-resposta">Clique em Perguntar para ver a resposta.</p>
-    </div>
+      <div class="resposta-box" id="resposta-box">
+        <h3>Resposta da IA:</h3>
+        <p id="texto-resposta">Clique em Perguntar para ver a resposta.</p>
+      </div>
+    </main>
   </div>
 
   <script src="script.js"></script>
