--- a/index.html
+++ b/index.html
@@ -6,37 +6,38 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+  <div class="container" id="container-principal"> 
+    
+    <header>
 
-  <div class="container" id="container-principal">
-
-    <div class="titulo">
-      <h2>Assistente de IA</h2>
-    </div>
-
-    <div class="key-model">
-      <div class="key">
-        <label for="api-key">OpenAI API Key:</label>
-        <br>
-        <input type="text" id="api-key" placeholder="***********************************">
-        <br><br>
-      </div>
-      <div class="model">
-        <label for="modelo">Modelo:</label>
-        <br>
-        <select id="modelo">
-        <option>GPT-4.1 Nano</option>
-        <option>GPT-4.1</option>
-        <option>GPT-3.5</option>
-        </select>
-        <br><br>
-      </div>
-    </div>
+      <h2 class="titulo">Assistente de IA</h2>   
+  
+      <div class="key-model">
+  
+        <div class="key">
+          <label for="api-key">OpenAI API Key:</label>
+          <input type="text" id="api-key" placeholder="******************************">
+        </div>
       
-    <label for="pergunta">Pergunta:</label>
-    <div class="pergunta-box">
+        <div class="model">
+          <label for="modelo">Modelo:</label>
+          <select id="modelo">
+          <option>GPT-4.1 Nano</option>
+          <option>GPT-4.1</option>
+          <option>GPT-3.5</option>
+          </select>
+        </div>
+  
+      </div>
+
+    </header>
+
+    <label class="answer" for="pergunta">Faça sua pergunta:</label>
+    <div class="pergunta-box">          
       <textarea id="pergunta" rows="5" cols="100" readonly>Qual é a função de um framework no desenvolvimento web?</textarea>
       <button onclick="mostrarResposta()">Perguntar</button>
-    </div>   
+    </div>
 
     <div class="resposta-box" id="resposta-box">
       <h3>Resposta da IA:</h3>
